<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_action_name"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/drawer_score"
            android:icon="@drawable/drawer_score"
            android:title="@string/drawer_score" />

        <item
            android:id="@+id/drawer_teacher"
            android:icon="@drawable/drawer_teacher"
            android:title="@string/drawer_teacher" />

        <item
            android:id="@+id/drawer_translate"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="번역하기" />

        <item
            android:id="@+id/drawer_coin"
            android:icon="@drawable/drawer_coin"
            android:title="@string/drawer_coin" />

    </group>

</menu>
